# ScancodeConfig

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
cmake/: AddTargetHelper.cmake  CtestHelper.cmake  DownloadFile.cmake
src/: CMakeLists.txt  main.cpp
src/AppScanMapWriter/: CMakeLists.txt  main.cpp
src/AppScancodeConf-qt/: AsconfAddDialog.cpp  AsconfAddDialog.hpp  AsconfMainWindow.cpp  AsconfMainWindow.hpp  AsconfMapModel.cpp  AsconfMapModel.hpp  AsconfMappingTable.cpp  AsconfMappingTable.hpp  CMakeLists.txt  main.cpp
src/AppScancodeConf-sdl/: AsconfDialog.cpp  AsconfDialog.hpp  AsconfMappingIO.cpp  AsconfMappingIO.hpp  AsconfMappingWindow.cpp  AsconfMappingWindow.hpp  AsconfRegistry.cpp  AsconfRegistry.hpp  AsconfScancode.hpp  CMakeLists.txt  main.cpp
src/AppScancodeConfig/: AscScanMap.cpp  AscScanMap.hpp  AscUtility.hpp  AscWindowMapping.cpp  AscWindowMapping.hpp  CMakeLists.txt  main.cpp
src/CompProcess/: CMakeLists.txt  CproHandle.hpp  CprocExec.cpp  CprocExec.hpp  CprocPipe.cpp  CprocPipe.hpp
src/CompRegistry/: CMakeLists.txt  CregAdmin.cpp  CregAdmin.hpp  CregHandler.cpp  CregHandler.hpp  CregTypes.hpp  CregWinCommonHeader.hpp
src/CompRegstry/: CregHandler.cpp  CregHandler.hpp
src/CompScancodeMap/: CMakeLists.txt  CsmCodec.cpp  CsmCodec.hpp  CsmViewer.cpp  CsmViewer.hpp  WindowsScancodes.hpp
src/ModImGui/: CMakeLists.txt  imgui_impl_sdl3.cpp
test/: CMakeLists.txt  TestBinData.hpp  TestCreg.cpp  TestCsmCodec.cpp  TestKeyName.cpp  TestProc.cpp
